<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.home.HomeFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/home_appbar_layout"
        android:layout_width="match_parent"
        android:background="@null"
        app:elevation="0dp"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/home_collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways|exitUntilCollapsed">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <androidx.appcompat.widget.SearchView
                        android:id="@+id/home_sv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        app:queryBackground="@android:color/transparent"
                        app:submitBackground="@android:color/transparent"
                        android:background="@drawable/bg_searchfield"
                        android:queryHint="@string/hint_search_pokemon"
                        app:defaultQueryHint="@string/hint_search_pokemon"
                        app:layout_constraintTop_toTopOf="parent"
                        app:queryHint="@string/hint_search_pokemon" />

                    <LinearLayout
                        android:id="@+id/home_filter_btns_box"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:orientation="horizontal">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/home_filter_btn_type"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_margin="3dp"
                            android:drawableEnd="@drawable/ic_chevron_down"
                            android:drawableTint="@color/white"
                            android:gravity="center"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:paddingBottom="15dp"
                            android:paddingTop="15dp"
                            app:cornerRadius="30dp"
                            android:backgroundTint="@color/black"
                            android:text="@string/home_type_btn_hint"
                            android:textAllCaps="false"
                            android:textColor="@android:color/white"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/home_filter_btn_order"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="30dp"
                            android:layout_weight="1"
                            android:layout_margin="3dp"
                            android:drawableEnd="@drawable/ic_chevron_down"
                            android:drawableTint="@color/white"
                            app:cornerRadius="30dp"
                            android:backgroundTint="@color/black"
                            android:gravity="center"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:paddingBottom="15dp"
                            android:paddingTop="15dp"
                            android:layout_marginEnd="5dp"
                            android:text="@string/home_order_btn_hint"
                            android:textAllCaps="false"
                            android:textColor="@android:color/white"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/home_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/home_rv"
        android:src="@drawable/ic_up"
        android:backgroundTint="@color/white"
        android:layout_margin="20dp"
        app:layout_anchorGravity="bottom|end"
        android:contentDescription="@string/go_up_hint" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/home_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>